--- a/aws/scripts/albingress_v1.0.0.yml
+++ b/aws/scripts/albingress_v1.0.0.yml
@@ -1,7 +1,6 @@
 # Application Load Balancer (ALB) Ingress Controller Deployment Manifest.
 # This manifest details sensible defaults for deploying an ALB Ingress Controller.
 # GitHub: https://github.com/kubernetes-sigs/aws-alb-ingress-controller
-# https://raw.githubusercontent.com/kubernetes-sigs/aws-alb-ingress-controller/v1.1.0/docs/examples/alb-ingress-controller.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -46,16 +45,35 @@ spec:
             # clusters.
             - --cluster-name=SEDCLUSTERNAMEHERE
 
+            # AWS VPC ID this ingress controller will use to create AWS resources.
+            # If unspecified, it will be discovered from ec2metadata.
+            # - --aws-vpc-id=vpc-xxxxxx
+
+            # AWS region this ingress controller will operate in. 
+            # If unspecified, it will be discovered from ec2metadata.
+            # List of regions: http://docs.aws.amazon.com/general/latest/gr/rande.html#vpc_region
+            # - --aws-region=us-west-1
+
             # Enables logging on all outbound requests sent to the AWS API.
             # If logging is desired, set to true.
-            - ---aws-api-debug
+            # - ---aws-api-debug
             # Maximum number of times to retry the aws calls.
             # defaults to 10.
-            - --aws-max-retries=10
+            # - --aws-max-retries=10
           env:
-
+            # AWS key id for authenticating with the AWS API.
+            # This is only here for examples. It's recommended you instead use
+            # a project like kube2iam for granting access.
+            #- name: AWS_ACCESS_KEY_ID
+            #  value: KEYVALUE
+            
+            # AWS key secret for authenticating with the AWS API.
+            # This is only here for examples. It's recommended you instead use
+            # a project like kube2iam for granting access.
+            #- name: AWS_SECRET_ACCESS_KEY
+            #  value: SECRETVALUE
           # Repository location of the ALB Ingress Controller.
-          image: docker.io/amazon/aws-alb-ingress-controller:v1.1.0
+          image: 894847497797.dkr.ecr.us-west-2.amazonaws.com/aws-alb-ingress-controller:v1.0.0
           imagePullPolicy: Always
           name: server
           resources: {}
